# Encurtador-URL

./: Procfile  pyproject.toml  shortener.db
front/: index.html  style.css
shortener_app/: config.py  crud.py  database.py  keygen.py  main.py  schemas.py
shortener_app/static/: style.css
shortener_app/templates/: index.html
