[tool.poetry]
name = "encurta_link"
version = "0.1.0"
description = ""
authors = ["Daniel Fernandes <danielfernandes202@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
fastapi = "0.75.0"
uvicorn = "0.17.6"
SQLAlchemy = "1.4.32"
python-dotenv = "0.19.2"
validators = "0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
